log
Thu, May 12, 2022 11:32:51 PM: 
 sudoku.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:80:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       aux = copy(n)->sudo[f][c] = i;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
7cab593
Thu, May 12, 2022 11:33:20 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
1f1b782
Thu, May 12, 2022 11:34:10 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
b2d678d
Thu, May 12, 2022 11:34:33 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d32e1da
Thu, May 12, 2022 11:34:43 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3ddbd8e
Thu, May 12, 2022 11:35:19 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
74f4063
